; ModuleID = '/home/carl/AnghaBench/git/builtin/extr_fsck.c_objerror.c'
source_filename = "/home/carl/AnghaBench/git/builtin/extr_fsck.c_objerror.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.object = type { i32 }

@ERROR_OBJECT = common dso_local global i32 0, align 4
@errors_found = common dso_local global i32 0, align 4
@stderr = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [19 x i8] c"error in %s %s: %s\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.object*, i8*)* @objerror to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @objerror(%struct.object* %0, i8* %1) #0 {
  %3 = alloca %struct.object*, align 8
  %4 = alloca i8*, align 8
  store %struct.object* %0, %struct.object** %3, align 8
  store i8* %1, i8** %4, align 8
  %5 = load i32, i32* @ERROR_OBJECT, align 4
  %6 = load i32, i32* @errors_found, align 4
  %7 = or i32 %6, %5
  store i32 %7, i32* @errors_found, align 4
  %8 = load i32, i32* @stderr, align 4
  %9 = call i32 @_(i8* getelementptr inbounds ([19 x i8], [19 x i8]* @.str, i64 0, i64 0))
  %10 = load %struct.object*, %struct.object** %3, align 8
  %11 = call i32 @printable_type(%struct.object* %10)
  %12 = load %struct.object*, %struct.object** %3, align 8
  %13 = call i32 @describe_object(%struct.object* %12)
  %14 = load i8*, i8** %4, align 8
  %15 = call i32 @fprintf_ln(i32 %8, i32 %9, i32 %11, i32 %13, i8* %14)
  ret i32 -1
}

declare dso_local i32 @fprintf_ln(i32, i32, i32, i32, i8*) #1

declare dso_local i32 @_(i8*) #1

declare dso_local i32 @printable_type(%struct.object*) #1

declare dso_local i32 @describe_object(%struct.object*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
